Finalize JScience Server: Spring Boot Migration, S3 Support, and Comprehensive Documentation
- Migrated jscience-server to Spring Boot 3.2.1
- Restored S3 functionality with AWS SDK v2
- Implemented comprehensive headers and Javadoc
- Fixed and verified all integration tests
- Resolved dependency conflicts (WireMock, Mockito)